z-index fixed

--- a/sass/components/_textWithImage.scss
+++ b/sass/components/_textWithImage.scss
@@ -25,6 +25,8 @@
     }
     a {
       align-self: start;
+      position: relative;
+      z-index: 10;
     }
     h1 {
       font-size: 2.4rem;
